--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.4",
     "three": "^0.137.5"
   }
 }
