Move some magic number to a config file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "module": "ESNext",
-    "target": "ESNext"
+    "target": "ESNext",
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
   },
   "include": [
     "./src/**/*.ts"
