--- a/src/config.json
+++ b/src/config.json
@@ -30,9 +30,10 @@
         "distance": 12,
         "speed": {
             "min": 10,
-            "max": 15,
+            "max": 18,
             "multiplier": 0.05
-        }
+        },
+        "accuracy": 0.2
     },
     "instructions": {
         "height": 5
