--- a/package.json
+++ b/package.json
@@ -1,35 +1,17 @@
 {
   "name": "tower-blocks",
   "version": "1.0.0",
-  "description": "",
   "main": "main.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint 'src/**/*.ts' --fix",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "prepare": "husky install"
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/feldhaus/tower-blocks.git"
-  },
-  "author": "Maicon Feldhaus",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/feldhaus/tower-blocks/issues"
-  },
-  "homepage": "https://github.com/feldhaus/tower-blocks#readme",
   "devDependencies": {
     "@types/three": "^0.179.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
-    "eslint": "^8.8.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-plugin-import": "^2.25.4",
-    "husky": "^7.0.4",
     "typescript": "^4.5.5",
     "vite": "^5.0.0"
   },
